--- a/SPA/src/app/members/member-edit/member-edit.component.html
+++ b/SPA/src/app/members/member-edit/member-edit.component.html
@@ -57,7 +57,7 @@
             </form>
           </tab>
           <tab heading="Fotoğraflarını Düzenle">
-            <p>Düzenle hadi hadi</p>
+            <app-photo-editor [photos]="user.photos"></app-photo-editor>
           </tab>
         </tabset>
       </div>
